fix(button): fix line break on buttons

--- a/packages/elvis/src/components/button.scss
+++ b/packages/elvis/src/components/button.scss
@@ -46,6 +46,7 @@ $loading-dot-sm: 8px;
   font-weight: $button-font-weight;
   justify-content: center;
   text-decoration: none;
+  white-space: nowrap;
 
   // Removing default focus on firefox
   &::-moz-focus-inner {
